--- a/recipe-app/package.json
+++ b/recipe-app/package.json
@@ -14,7 +14,8 @@
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "vite-plugin-require": "^1.2.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
